2012-03-20  Adele Peterson  <adele@apple.com>

        "Attempt to insert nil value " exception when calling attributed string APIs on content with a custom font
        https://bugs.webkit.org/show_bug.cgi?id=81630
        <rdar://problem/10650660>

        Reviewed by Alexey Proskuryakov.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/mac/Ahem.ttf: Added.
        * TestWebKitAPI/Tests/mac/AttributedString.mm: Added.
        (-[AttributedStringTest webView:didFinishLoadForFrame:]):
        (TestWebKitAPI):
        (TestWebKitAPI::didFinishLoadForFrame):
        (TestWebKitAPI::TEST):
        * TestWebKitAPI/Tests/mac/attributedStringCustomFont.html: Added.

2012-03-20  Eric Seidel  <eric@webkit.org>

        Add link on queues.webkit.org to kov's fancy queue-depth graph
        https://bugs.webkit.org/show_bug.cgi?id=81690

        Reviewed by Adam Barth.

        * QueueStatusServer/templates/recentstatus.html:

2012-03-20  Tim Horton  <timothy_horton@apple.com>

        [mac] Restore color space switching code to run-webkit-tests
        https://bugs.webkit.org/show_bug.cgi?id=80571
        <rdar://problem/11008529>

        Reviewed by Simon Fraser.

        Make use of the layout test helper hooks to restore the Mac system-wide
        color profile switching code. This makes WkTR and DRT results match, and
        causes the main display's color profile to not affect results on Lion.

        * DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj:
        * DumpRenderTree/mac/LayoutTestHelper.m: Added.
        (installLayoutTestColorProfile):
        (restoreUserColorProfile):
        (simpleSignalHandler):
        (main):
        * Scripts/webkitpy/layout_tests/port/mac.py:
        (MacPort.release_http_lock):
        (MacPort):
        (MacPort._path_to_helper):
        (MacPort.start_helper):
        (MacPort.stop_helper):
        * WebKitTestRunner/mac/PlatformWebViewMac.mm: