@@ -1,5 +1,13 @@
 2012-03-20  Adele Peterson  <adele@apple.com>
 
+        Update the last test to use EXPECT_WK_STREQ.
+
+        Reviewed by Dan Bernstein.
+
+        * TestWebKitAPI/Tests/mac/AttributedString.mm: (TestWebKitAPI::TEST):
+
+2012-03-20  Adele Peterson  <adele@apple.com>
+
         "Attempt to insert nil value " exception when calling attributed string APIs on content with a custom font
         https://bugs.webkit.org/show_bug.cgi?id=81630
         <rdar://problem/10650660>
